[package]
name = "tessellation"
version = "0.1.0"
authors = ["David Rasch <david@bigdatahub.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version="0.18.1", default-features=false}
raqote = { version="0.7.8", default-features=false}
## serde for json
