[package]
name = "tessellation"
version = "0.1.0"
authors = ["David Rasch"]
license= "GPL-3.0"
edition = "2018"
repository = "https://github.com/dcrasch/tir"

[features]
gui = ["minifb"]

[[bin]]
name="tir"
required-features=["gui"]

[dependencies]
minifb = { version="0.15.3", optional=true }
euclid = "0.20.7"
raqote = { version="0.7.11", default-features=false}
serde = { version="1.0.104", features = ["derive"] }
serde_json = "1.0.48"
