[package]
name = "tessellations"
version = "0.1.2"
authors = ["David Rasch"]
license= "GPL-3.0"
edition = "2021"
repository = "https://github.com/dcrasch/tir"
keywords = ["tessellation", "graphics"]
description = "Library to create and draw periodic tilings of the plane."
documentation = "https://docs.rs/tessellations/"

[lib]
name="tessellations"

[dependencies]
raqote = { version="0.8.1", default-features = false, features=["png"] }
serde = { version="1.0.104", features = ["derive"] }
euclid = "0.22" ##must be same version as raqote

[dev-dependencies]
serde_json = "1.0.48"
