[package]
name = "tir-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4", features = ["macro", "hooks"] }
euclid = "=0.22"
fermi = "0.4.0"
freya = "0.1.8"
raqote = "0.8.3"
skia-safe = {version="=0.63.0", features=["binary-cache"]}  # must be same version a used in freya-engine
tessellations = { path = "../tessellations" }
