[package]
name = "tir-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tessellations = { path = "../tessellations" }
raqote = { version="0.8.2", default-features = false, features=["png"]}
euclid = "0.22"

freya = "0.1.8"
skia-safe = { version="0.63.0", features = ["egl","gl","svg","textlayout","wayland","x11"]}
fermi = "0.4.0"
dioxus = "0.4.0"
