[package]
name = "tir"
version = "0.1.0"
authors = ["David Rasch"]
license= "GPL-3.0"
edition = "2018"
repository = "https://github.com/dcrasch/tir"


[[bin]]
name="tir"
path="src/tir.rs"

[dependencies]
minifb = { version="0.15.3" }
tessellations = { path = "../tessellations" }
serde_json = "1.0.48"
raqote = { version="0.7.11", default-features=false}
euclid = "0.20.7"