[package]
name = "tir"
version = "0.2.0"
authors = ["David Rasch"]
license= "GPL-3.0"
edition = "2021"
repository = "https://github.com/dcrasch/tir"

[[bin]]
name="tir"
path="src/tir.rs"

[dependencies]
winit = "0.28"
winit_input_helper = "0.14"
pixels = "0.13"
tessellations = { path = "../tessellations" }
serde_json = "1.0"
raqote = { version="0.8.2", default-features = false, features=["png"]}
euclid = "0.22"
